<resources>
    <string name="app_name">Nutrition Analysis</string>
    <string name="analyse">Analyse</string>
    <string name="ingredientHint">e.g. Carrot 50 g</string>
    <string name="enter_your_ingredients">Enter your ingredients:</string>
    <string name="name_item_label">Name:</string>
    <string name="weight_item_label">Weight:</string>
    <string name="unit_item_label">Unit:</string>
    <string name="calories_item_label">Calories:</string>
    <string name="quantity_item_label">Quantity:</string>
    <string name="total_nutrition_facts">Total nutrition facts</string>
    <string name="one_digit">1</string>
    <string name="unknown_error_message">Something went wrong please try again later.</string>
    <string name="network_error_message">Couldn\'t reach server please check your internet.</string>
    <string name="low_quality_error_message">Please make sure you entered ingredient correctly.</string>
</resources>